[package]
name = "sombra-windows-service"
version = "0.1.0"
authors = ["Matheus T. dos Santos <tenoriomatheus0@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.21"
windows-service = "0.3.1"
dunce = "1.0.1"
rand = "0.8.0"
state = { version = "0.4", features = ["tls"] }
